--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+/* 
+    Nunito and Barlow fonts are imported from Google Fonts.
+*/
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    overflow-x: clip;
+    scroll-behavior: smooth;
+}
+body {
+    overflow-x: clip;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+}
+img {
+    max-width: 100%;
+    display: block;
+}
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Barlow', sans-serif;
+    font-weight: 700;
+}
+::-webkit-scrollbar {
+    width: 10px;
+  border-radius: 100vw;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgb(51, 152, 219);
+}
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+/* =================components */
+.logo {
+    font-family: 'Barlow', sans-serif;
+}
+/* Button */
+.icon-button:is(:hover, :focus-within) .icon-button-info {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s, opacity 0.5s linear;
+    -webkit-transition: visibility 0s, opacity 0.5s linear;
+    -ms-transition: visibility 0s, opacity 0.5s linear;
+    -moz-transition: visibility 0s, opacity 0.5s linear;
+    -o-transition: visibility 0s, opacity 0.5s linear;
+}
+.icon-button-info {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    -webkit-transition: visibility 0s, opacity 0.5s linear;
+    -ms-transition: visibility 0s, opacity 0.5s linear;
+    -moz-transition: visibility 0s, opacity 0.5s linear;
+    -o-transition: visibility 0s, opacity 0.5s linear;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mobile-signup-btn:is(:hover, :focus-visible) .mobile-signup-btn-bg {
+    transform: translateX(100%);
 }
+.mobile-nav-hidden {
+    transform: translateX(100%);
+}
+.nav-signup-btn:is(:hover, :focus-visible) span {
+    transform: translateY(-100%);
+}
+/* =================end of components */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* =========== custom animations */
+@keyframes shake {
+    0% { transform: translateX(0); }
+    20% { transform: translateX(-5px); }
+    40% { transform: translateX(5px); }
+    60% { transform: translateX(-5px); }
+    80% { transform: translateX(5px); }
+    100% { transform: translateX(0); }
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .shake-animation {
+    animation: shake 0.5s ease-in-out;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* =========== end of custom animations */
