--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@layer components {
+    /* reused styles */
+    .flex-center {
+      @apply flex items-center justify-center;
+    }
+    .container-wrapper {
+        @apply max-w-[1200px] mx-auto w-full;
+    }
+    .truncate {
+        @apply overflow-hidden whitespace-nowrap overflow-ellipsis;
+    }
+    /* end of reused styles */
+    .icon-button {
+      @apply w-8 h-8 md:w-10 md:h-10 flex items-center justify-center rounded-full shadow-md hover:shadow-lg transition duration-300 ease-in-out text-base md:text-xl relative;
+    }
+    .search-input {
+        @apply w-full py-2 px-3 h-full rounded-md text-lg bg-white text-black focus:outline-none focus:ring-2 focus:ring-opacity-50 transition duration-500 ease-in-out;
+    }
+    .header-wrapper {
+        @apply w-full h-full flex justify-center items-center flex-col gap-5 lg:gap-10 max-w-[1200px] mx-auto;
+    }
+  }
